<resources>
    <string name="app_name">LoveTime</string>

    <string name="details">Details</string>
    <string name="title">You have been together since</string>

    <string name="year">year(s)</string>
    <string name="month">month(s)</string>
    <string name="day">day(s)</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>

    <!-- Date over Picture -->
    <string name="date">%1$d.%2$d.%3$d</string>

    <string name="setDate">Since when are you together</string>
    <string name="pickDate">Pick the day</string>


    <!-- Been together -->
    <string name="fresh">Freshly together</string>

    <string name="been_together_day">%1$d day</string>
    <string name="been_together_days">%1$d days</string>

    <string name="been_together_month">%1$d month</string>
    <string name="been_together_month_day">%1$d month %2$d day </string>
    <string name="been_together_month_days">%1$d month %2$d days </string>
    <string name="been_together_months">%1d months</string>
    <string name="been_together_months_day">%1d months %2$d day</string>
    <string name="been_together_months_days">%1d months %2$d days</string>

    <string name="been_together_year">%1$d year</string>
    <string name="been_together_year_day">%1$d year %2$d day </string>
    <string name="been_together_year_days">%1$d year %2$d days </string>
    <string name="been_together_year_month">%1d year %2$d month</string>
    <string name="been_together_year_months">%1d year %2$d months</string>
    <string name="been_together_years">%1$d years</string>
    <string name="been_together_years_day">%1$d years %2$d day </string>
    <string name="been_together_years_days">%1$d years %2$d days </string>
    <string name="been_together_years_month">%1d years %2$d month</string>
    <string name="been_together_years_months">%1d years %2$d months</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="image">Image</string>
    <string name="select_image">Select Image</string>
    <string name="change_date">Change Date</string>
    <string name="your_dates">Your Dates</string>
    <string name="names">Names</string>
    <string name="set_names">Set Names</string>
    <string name="notifications">Notifications</string>
    <string name="disable_notifications">Disable Notifications</string>
    <string name="reset_picture">Reset Picture</string>
    <string name="lovetime">LoveTime</string>
    <string name="developer">Developer</string>
    <string name="toscanphoenix_aka_fenni">Toscanphoenix aka. Fenni</string>
    <string name="design">Design</string>
    <string name="andreas_rau">Andreas Rau</string>
    <string name="donate">Donate</string>


    <!-- Engaged Page-->
    <string name="title_engaged">You have been engaged since</string>

    <!-- Married Page-->
    <string name="title_married">You have been married since</string>
    <string name="change_engagement_date">Change engagement Date</string>
    <string name="since_when_are_you_engaged">Since when are you engaged</string>
    <string name="since_when_are_you_married">Since when are you married?</string>
    <string name="change_marriage_date">Change Marriage Date</string>

</resources>