<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <ScrollView
        android:layout_width="413dp"
        android:layout_height="652dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/images"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:fontFamily="@font/magnolia_script"
                android:gravity="center"
                android:text="@string/image"
                android:textColor="@color/firebrick"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_select_image"
                android:layout_width="416dp"
                android:layout_height="62dp"
                android:layout_marginTop="11dp"
                android:gravity="center_vertical"
                android:text="@string/select_image"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btn_reset_image"
                android:layout_width="416dp"
                android:layout_height="62dp"
                android:gravity="center_vertical"
                android:text="@string/reset_picture" />


            <TextView
                android:id="@+id/change_date"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:fontFamily="@font/magnolia_script"
                android:gravity="center"
                android:text="@string/your_dates"
                android:textColor="@color/firebrick"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_change_date"
                android:layout_width="416dp"
                android:layout_height="62dp"
                android:layout_marginTop="11dp"
                android:gravity="center_vertical"
                android:text="@string/change_date"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btn_change_date_engagement"
                android:layout_width="416dp"
                android:layout_height="62dp"
                android:layout_marginTop="11dp"
                android:gravity="center_vertical"
                android:text="@string/change_engagement_date"
                tools:ignore="RtlHardcoded" />


            <TextView
                android:id="@+id/Names"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:fontFamily="@font/magnolia_script"
                android:gravity="center"
                android:text="@string/names"
                android:textColor="@color/firebrick"
                android:textSize="20sp" />

            <Button
                android:id="@+id/edit_Names"
                android:layout_width="416dp"
                android:layout_height="62dp"
                android:gravity="center_vertical"
                android:text="@string/set_names" />


            <TextView
                android:id="@+id/Notifications"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:fontFamily="@font/magnolia_script"
                android:gravity="center"
                android:text="@string/notifications"
                android:textColor="@color/firebrick"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="369dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/disable_notifications"
                android:textSize="17sp"
                tools:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:fontFamily="@font/magnolia_script"
                android:gravity="center"
                android:text="Reset App"
                android:textColor="@color/firebrick"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Reset!!!"/>


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/go_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:focusable="true"
        android:contentDescription="close" />


</androidx.constraintlayout.widget.ConstraintLayout>