<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/header"
         />

    <TextView
        android:id="@+id/amount_days_together"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/magnolia_script"
        android:gravity="left"
        android:text="0"
        android:textColor="@color/firebrick"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/days"
        app:layout_constraintTop_toBottomOf="@+id/amount_month_together" />

    <TextView
        android:id="@+id/days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/day"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/months" />

    <TextView
        android:id="@+id/amount_month_together"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/magnolia_script"
        android:gravity="right"
        android:text="0"
        android:textColor="@color/firebrick"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/months"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_years_together" />

    <TextView
        android:id="@+id/months"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/month"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/years" />

    <TextView
        android:id="@+id/togetherSince"
        android:layout_width="410dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="@font/magnolia_script"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/firebrick"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/mainOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="411dp"
        android:layout_height="386dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/together"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainOut" />

    <TextView
        android:id="@+id/mainOut"
        android:layout_width="412dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/magnolia_script"
        android:gravity="center"
        android:text="You're alone"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/togetherSince" />

    <TextView
        android:id="@+id/details"
        android:layout_width="414dp"
        android:layout_height="25dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/magnolia_script"
        android:gravity="center"
        android:text="@string/details"
        android:textColor="@color/firebrick"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        app:layout_constraintVertical_bias="0.047"
        tools:layout_constraintTop_toBottomOf="@id/photo" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="112dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/amount_years_together"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/magnolia_script"
        android:gravity="right"
        android:text="0"
        android:textColor="@color/firebrick"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/years"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details" />


    <TextView
        android:id="@+id/years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginTop="31dp"
        android:gravity="center"
        android:text="@string/year"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details" />

    <TextView
        android:id="@+id/dateBanner"
        android:layout_width="411dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:background="#99000000"
        android:fontFamily="@font/magnolia_script"
        android:gravity="center"
        android:textColor="@color/firebrick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainOut" />

    <TextView
        android:id="@+id/dateBanner2"
        android:layout_width="411dp"
        android:layout_height="22dp"
        android:layout_marginTop="372dp"
        android:background="#99000000"
        android:fontFamily="@font/magnolia_script"
        android:gravity="center"
        android:textColor="@color/firebrick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainOut" />



</androidx.constraintlayout.widget.ConstraintLayout>